force-app/main/default/objects/Local_Banking_Filters__c/Local_Banking_Filters__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Local Banking Filters</label>
</CustomObject>