force-app/main/default/objects/Local_Banking_Filters__c/fields/LB_CHK_Active__c.field-meta.xml
<CustomField>
    <fullName>LB_CHK_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>