force-app/main/default/objects/Local_Banking_Filters__c/fields/LB_TXT_Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>LB_TXT_Country_ISO_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country ISO Code</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>