force-app/main/default/objects/Local_Banking_Filters__c/fields/LB_TXT_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>LB_TXT_Country_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>