force-app/main/default/objects/Local_Banking_Filters__c/fields/LB_TXT_Currencies__c.field-meta.xml
<CustomField>
    <fullName>LB_TXT_Currencies__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Currencies</label>
    <type>TextArea</type>
</CustomField>