force-app/main/default/objects/Local_Banking_Filters__c/listViews/Local_Banking_Filters_View.listView-meta.xml
<ListView>
    <fullName>Local_Banking_Filters_View</fullName>
    <columns>NAME</columns>
    <columns>LB_TXT_Country_ISO_Code__c</columns>
    <columns>LB_TXT_Country_Name__c</columns>
    <columns>LB_TXT_Currencies__c</columns>
    <columns>LB_CHK_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Local Banking Filters View</label>
    <language>en_US</language>
</ListView>